--- a/README.rdoc
+++ b/README.rdoc
@@ -10,7 +10,13 @@
       `git checkout -b add_geojson_bin origin/add_geojson_bin`
       `cd topojson`
       `npm install . -g`
-
+   3) Mac OSX with PostgresApp
+      If you gen an pg gem error find the pg_config file and set it on --with-pc-config
+          sudo find / -name pg_config
+          gem install pg -- --with-pg-config=/Applications/Postgres.app/Contents/MacOS/bin/pg_config
+     ERROR: `rescue in <module:FFIGeos>': Couldn't load the GEOS CAPI library. (LoadError)
+       Solution:
+          brew install geos
 
 == Setup
 1) install gems:
@@ -18,6 +24,12 @@
 
 2) create super db user
   createuser --pwprompt --superuser pointsinarea
+  If you get this error:
+    Is the server running locally and accepting connections on Unix domain socket "/var/pgsql_socket/.s.PGSQL.5432"?
+  You can fix this issue by not using the socket, but just conneting to the host:
+    createuser -h localhost --pwprompt --superuser pointsinarea
+
+
 
 3) setup db
   rake db:create
@@ -37,3 +49,5 @@
     - a point in New York City
     - multi points
 
+== Specs
+   To run test execute 'rake spec' in root folder
